fixing card alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -396,7 +396,10 @@ div.hero {
         }
 
         .button {
-            margin: 0.5em auto 0 auto;
+        margin: 0.5em 0 0 0;
+        @media only screen and (max-width: 700px) {
+               margin: 0.5em auto 0 auto;
+        }
             width: 14em;
             line-height: 64px;
         }
